fixed UI alignment issues

--- a/app/views/exchanges/hbx_profiles/_edit_open_enrollment.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_open_enrollment.html.erb
@@ -10,29 +10,29 @@
 
               <div class='row'>
                 <div class="col-sm-12">
-                  <div class="form-group">
-                    <label for="empoyerName"><%= l10n("hbx_profiles.employer_name") %>:</label>
-                    <%= @employer_profile.organization.legal_name %>
+                  <div class="form-group pull-left">
+                    <label for="empoyerName"><strong><%= l10n("hbx_profiles.employer_name") %>:</strong></label>
+                      <%= @employer_profile.organization.legal_name %>
                   </div>
                 </div>
                 <div class="col-sm-12">
-                  <div class="form-group">
-                    <label for="effectiveDate"><%= l10n("hbx_profiles.effective_date") %>:</label>
-                    <%= @plan_year.start_on.strftime('%m/%d/%Y') %>
+                  <div class="form-group pull-left">
+                    <label for="effectiveDate"><strong><%= l10n("hbx_profiles.effective_date") %>:</strong></label>
+                      <%= @plan_year.start_on.strftime('%m/%d/%Y') %>
                   </div>
                 </div>
                 <div class="col-sm-12">
-                  <div class="form-group">
-                    <label for="openEnrollmentEndDate"><%= l10n("hbx_profiles.open_enrollment_end_date") %>:</label>
-                    <%= @plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %>
+                  <div class="form-group pull-left">
+                    <label for="openEnrollmentEndDate"><strong><%= l10n("hbx_profiles.open_enrollment_end_date") %>:</strong></label>
+                      <%= @plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %>
                   </div>
                 </div>
               </div>
               <div class='row'>
                 <div class="col-sm-12">
-                  <div class="form-group">
-                    <label for="newOpenEnrollmentEnd"><%= l10n("hbx_profiles.please_choose_new_oe_date") %>:</label>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<input name="open_enrollment_end_date" type="text" class="uidatepicker" placeholder="Select OE End Date" class="form-control" required>
+                  <div class="form-group pull-left">
+                    <label for="newOpenEnrollmentEnd"><strong><%= l10n("hbx_profiles.please_choose_new_oe_date") %>:</strong></label>
+                    &nbsp;&nbsp;&nbsp;&nbsp;<input name="open_enrollment_end_date" type="text" class="uidatepicker" placeholder="Select OE End Date" class="form-control" required autocomplete="off" onkeypress="return false;">
                   </div>
                 </div>
               </div>
@@ -57,4 +57,5 @@
   $(".uidatepicker").datepicker({minDate: "<%= @plan_year.open_enrollment_date_bounds[:min] %>", maxDate: "<%= @plan_year.open_enrollment_date_bounds[:max] %>", changeMonth: true, changeYear: true, yearRange: (new Date).getFullYear() + ":" + (new Date).getFullYear()+1 });
 
   $(".uidatepicker").datepicker( "option", "dateFormat", "mm/dd/yy" );
+  $(".uidatepicker").datepicker(  );
 </script>
