--- a/app/views/exchanges/hbx_profiles/_oe_extended_applications.html.erb
+++ b/app/views/exchanges/hbx_profiles/_oe_extended_applications.html.erb
@@ -10,7 +10,7 @@
         <th><%= l10n("hbx_profiles.oe_end_date")%></th>
         <th><%= l10n("hbx_profiles.application_status")%></th>
         <th><%= l10n("hbx_profiles.submitted_at")%></th>
-        <th><%= l10n("hbx_profiles.last_updated_at")%></th>
+        <th class="pull-left"><%= l10n("hbx_profiles.last_updated_at")%></th>
         <th></th>
       </tr>
     </thead>
@@ -22,9 +22,9 @@
           <td><%= plan_year.open_enrollment_end_on.strftime('%m/%d/%Y') %></td>
           <td><%= plan_year.aasm_state.to_s.humanize.titleize %></td>
           <td><%= TimeKeeper.local_time(plan_year.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
-          <td><%= TimeKeeper.local_time(plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
+          <td class="pull-left"><%= TimeKeeper.local_time(plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
           <td>
-            <%= link_to l10n('hbx_profiles.close_open_enrollment'), close_extended_open_enrollment_exchanges_hbx_profiles_path(id: @employer_profile.id, plan_year_id: plan_year.id), :method => :post, :role => 'button', :class => "btn btn-primary btn-sm #{pundit_class HbxProfile, :can_extend_open_enrollment? }" %>
+            <%= link_to l10n('hbx_profiles.close_open_enrollment'), close_extended_open_enrollment_exchanges_hbx_profiles_path(id: @employer_profile.id, plan_year_id: plan_year.id), :method => :post, :role => 'button', :class => "btn btn-primary pull-right btn-sm #{pundit_class HbxProfile, :can_extend_open_enrollment? }" %>
           </td>
         </tr>
         <% end %>
