--- a/app/views/insured/families/verification/_admin_verification_actions.html.erb
+++ b/app/views/insured/families/verification/_admin_verification_actions.html.erb
@@ -87,6 +87,29 @@
 </div>
 <!-- ==== Extend request ==== -->
 
+<!-- ***** Verification reason Social Security File Match ***** -->
+<div class="row">
+  <div class="verification-update-reason col-md-12" id=<%="#{person.id}-#{v_type.split.join('-')}-ssfm"%>>
+    <div class="col-md-6">
+      Provide verification reason:
+    </div>
+    <%= form_tag update_verification_type_documents_path, method: :put do %>
+        <%= hidden_field_tag 'person_id', person.id  %>
+        <%= hidden_field_tag 'verification_type', type.id %>
+        <%= hidden_field_tag 'admin_action', 'verify' %>
+        <%= hidden_field_tag 'family_member_id', f_member.id  %>
+        <div class="form-group col-md-3">
+          <%= text_field_tag :verification_reason, nil, placeholder: "Reason", required: true %>
+        </div>
+
+        <div class="col-md-3">
+          <%= submit_tag "Confirm", class: "btn btn-default v-type-confirm-button" %>
+        </div>
+    <%end%>
+  </div>
+</div>
+<!-- ==== verification reason Social Security File Match ==== -->
+
 <!-- ***** View History ***** -->
 <div class="row">
   <div class="view-history col-md-12" id=<%="#{person.id}-#{v_type.split.join('-')}-history"%>>
