--- a/components/notifier/app/assets/javascripts/notifier/ckeditor/config.js.erb
+++ b/components/notifier/app/assets/javascripts/notifier/ckeditor/config.js.erb
@@ -27,20 +27,48 @@ CKEDITOR.editorConfig = function( config )
   config.removeButtons = "Form,Checkbox,Radio,TextField,Textarea,Select,Button,ImageButton,HiddenField,About,Print,Save,NewPage,Preview,Save,Language,Flash,Smiley,Image,Iframe";
 
   config.placeholder_selects = [
-      {
+    {
+      key: 'select_system_settings',
+      title: 'Select Application Settings',
+      placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.settings_placeholders.to_json %>
+    },
+    {
+      key: 'select_conditional_statement',
+      title: 'Select Condition/Loop',
+      placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.place_holders.to_json %>
+    },
+    {
         key: 'select_system_settings',
         title: 'Select Application Settings',
-        placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.settings_placeholders.to_json %>
-      },
-      {
+        placeholders: <%= Notifier::MergeDataModels::ConsumerRole.new.settings_placeholders.to_json %>
+    },
+    {
         key: 'select_conditional_statement',
         title: 'Select Condition/Loop',
-        placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.place_holders.to_json %>
-      }
-     
-      ];
+        placeholders: <%= Notifier::MergeDataModels::ConsumerRole.new.place_holders.to_json %>
+    }
+  ];
 
 
   config.extraPlugins = 'button,lineutils,widgetselection,notification,toolbar,widget,dialogui,dialog,clipboard,token,placeholder,placeholder_select';
   config.language = 'en';
 };
+
+//   config.placeholder_selects = [
+//       {
+//         key: 'select_system_settings',
+//         title: 'Select Application Settings',
+//         placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.settings_placeholders.to_json %>
+//       },
+//       {
+//         key: 'select_conditional_statement',
+//         title: 'Select Condition/Loop',
+//         placeholders: <%= Notifier::MergeDataModels::EmployerProfile.new.place_holders.to_json %>
+//       }
+
+//       ];
+
+
+//   config.extraPlugins = 'button,lineutils,widgetselection,notification,toolbar,widget,dialogui,dialog,clipboard,token,placeholder,placeholder_select';
+//   config.language = 'en';
+// };
