--- a/app/views/shared/_individual_progress.html.haml
+++ b/app/views/shared/_individual_progress.html.haml
@@ -44,12 +44,12 @@
   %button.btn.btn-lg.btn-primary.btn-br.btn-block.interaction-click-control-continue.hidden{type: 'submit'}
     CONTINUE
 - elsif ridp == true && step == 2
-/   = link_to "Continue", new_insured_interactive_identity_verification_path, class: 'button btn btn-lg btn-primary  btn-block interaction-click-control-continue', id: 'btn-continue', :disabled => true
-/ - elsif step == 2 && application_checklist == true
-/   = link_to 'Continue', insured_family_members_path(consumer_role_id: @person.consumer_role.id), class: 'btn btn-lg btn-primary  btn-block', id: 'btn-continue', disabled: !enabled
-/ - elsif step == 2
-/ - elsif step == 7 && defined? url
-/   = link_to 'Continue', url, class: "btn btn-lg btn-primary #{css_class} btn-block", id: 'btn-continue'
+  -#= link_to "Continue", new_insured_interactive_identity_verification_path, class: 'button btn btn-lg btn-primary  btn-block interaction-click-control-continue', id: 'btn-continue', :disabled => true
+  -#  - elsif step == 2 && application_checklist == true
+  -#  = link_to 'Continue', insured_family_members_path(consumer_role_id: @person.consumer_role.id), class: 'btn btn-lg btn-primary  btn-block', id: 'btn-continue', disabled: !enabled
+  -#  - elsif step == 2
+  -#  - elsif step == 7 && defined? url
+  -#  = link_to 'Continue', url, class: "btn btn-lg btn-primary #{css_class} btn-block", id: 'btn-continue'
   - if next_link.present?  && current_user.has_hbx_staff_role? && (@person.primary_family.application_type == "Phone" || @person.primary_family.application_type == "Paper")
     = link_to "Continue", next_link, :method => :get, class: 'button btn btn-lg btn-primary  btn-block interaction-click-control-continue', id: 'btn-continue', :disabled => (application_verified || identity_verified) ? false : true
   - elsif next_link.present?
