--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -185,12 +185,13 @@
     </div>
     <% if !read_only == true %>
       <div class="col-lg-3">
-        <div class="row <%if disable_make_changes_button?(hbx_enrollment)%>cna<%end%>">
-          <% if @family.is_eligible_to_enroll? && !hbx_enrollment.coverage_terminated? %>
+        <div class="row <% if disable_make_changes_button?(hbx_enrollment)%>cna<%end%>">
+        <% if enable_make_changes_shop_button?(hbx_enrollment) %>
             <%= pundit_span Family, :updateable? %>
               <%= link_to l10n("make_changes"), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id), class: "btn btn-default btn-block, disabled: disable_make_changes_button?(hbx_enrollment)" %>
             </span>
-          <% elsif hbx_enrollment.may_terminate_coverage? && hbx_enrollment.kind == "individual" %>
+          <!-- This potentially allows certain shop users to view Make Changes -->
+        <% elsif enable_make_changes_button?(hbx_enrollment) %>
             <%= pundit_span Family, :updateable? %>
               <%= link_to l10n("terminate_plan"), terminate_confirm_insured_group_selections_path(hbx_enrollment_id: hbx_enrollment.id), {class: 'btn btn-default btn-block' } %>
             </span>
