--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -12,7 +12,6 @@
     </h3>
     <%= render partial: "insured/families/enrollment_progress", locals: {step: hbx_enrollment.enroll_step, hbx_enrollment: hbx_enrollment} %>
   </div>
-
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12 vertically-aligned-row">
@@ -113,7 +112,6 @@
         </div>
       </div>
     <% end %>
-
     <div class="col-xs-12 vertically-aligned-row">
       <div class="enrollment-type info">
         <p class="mb-0">
@@ -170,7 +168,6 @@
     <% end %>
   <% end %>
 </div>
-
 <div class="panel-footer">
   <div class="vertically-aligned-row">
     <div>
@@ -185,13 +182,14 @@
     </div>
     <% if !read_only == true %>
       <div class="col-lg-3">
-        <div class="row <% if disable_make_changes_button?(hbx_enrollment)%>cna<%end%>">
-        <% if enable_make_changes_shop_button?(hbx_enrollment) %>
+        <div class="row <% if hbx_enrollment.display_make_changes_for_shop? %>cna<%end%>">
+        <% if hbx_enrollment.display_make_changes_for_shop? %>
             <%= pundit_span Family, :updateable? %>
-              <%= link_to l10n("make_changes"), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id), class: "btn btn-default btn-block, disabled: disable_make_changes_button?(hbx_enrollment)" %>
+               <!-- Use turbolinks: false, to avoid calling controller action twice-->
+              <%= link_to l10n('make_changes'), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind), class: 'btn btn-default btn-block ee-make-changes', disabled: !hbx_enrollment.display_make_changes_for_shop?,  data: { turbolinks: false } %>
             </span>
           <!-- This potentially allows certain shop users to view Make Changes -->
-        <% elsif enable_make_changes_button?(hbx_enrollment) %>
+        <% elsif hbx_enrollment.display_make_changes_for_ivl? %>
             <%= pundit_span Family, :updateable? %>
               <%= link_to l10n("terminate_plan"), terminate_confirm_insured_group_selections_path(hbx_enrollment_id: hbx_enrollment.id), {class: 'btn btn-default btn-block' } %>
             </span>
