--- a/app/views/exchanges/hbx_profiles/_send_secure_message_form.html.erb
+++ b/app/views/exchanges/hbx_profiles/_send_secure_message_form.html.erb
@@ -7,7 +7,7 @@
 <%end%>
 
 <form id="secure_message_form" onsubmit="return false;" >
-  <div id="add_sep">
+  <div>
     <div class="bottom-pd">
       <div class="row no-buffer">
         <div class="col-md-6 col-md-offset-3 input-no-pd bottom-pd">
@@ -15,20 +15,20 @@
           <table class="table table-message-wrapper">
             <tbody>
             <tr>
-              <th>Recipient:</th>
+              <th style="text-transform: capitalize;">Recipient:</th>
               <td>&nbsp; &nbsp;<b><%=  @resource.try(:full_name) ||  @resource.try(:legal_name) %></b></td>
             </tr>
             <tr>
-              <th>Subject<span class="text-danger">*</span>:</th>
-              <td><%= text_field_tag :subject, @subject, placeholder: 'Subject', maxlength: 100, include_blank: false, required: true %></td>
+              <th style="text-transform: capitalize;">Subject<span class="text-danger">*</span>:</th>
+              <td><%= text_field_tag :subject, @subject, :size => "55", placeholder: 'Subject', include_blank: false, required: true %></td>
             </tr>
             <tr>
-              <th style="vertical-align: top;">Content<span class="text-danger">*</span>:</th>
-              <td><%= text_area_tag 'body', @body , rows: 5, cols: 2, placeholder: 'Write here...', include_blank: false, required: true  %></td>
+              <th style="vertical-align: top; text-transform: capitalize;">Content<span class="text-danger">*</span>:</th>
+              <td><%= text_area_tag 'body', @body , rows: 5, cols: 50, placeholder: 'Write here...', include_blank: false, required: true  %></td>
             </tr>
             <tr>
-              <th style="vertical-align: top;">Document(optional)<span class="text-danger"></span>:</th>
-              <td><%= file_field_tag "file", type: :file, accept: 'application/pdf', class: "doc-upload-file"%></td>
+              <th style="vertical-align: top; text-transform: capitalize;">Document: (optional)<span class="text-danger"></span></th>
+              <td><%= file_field_tag "file", type: :file, accept: 'image/png,image/jpeg,application/pdf', class: "doc-upload-file"%></td>
             </tr>
             </tbody>
           </table>
