refs #88209 refactor code

--- a/app/views/exchanges/hbx_profiles/_send_secure_message_form.html.erb
+++ b/app/views/exchanges/hbx_profiles/_send_secure_message_form.html.erb
@@ -61,6 +61,9 @@
 <script type="text/javascript">
 
   $(document).on('click', '#send_secure_message', function(e) {
+
+    $(".btn-confirmation").removeAttr('disabled');
+
     if ( $('#secure_message_form')[0].checkValidity() ) {
       $('#sendSecure').modal('show')
     }
