--- a/app/views/exchanges/hbx_profiles/new_secure_message.js.erb
+++ b/app/views/exchanges/hbx_profiles/new_secure_message.js.erb
@@ -8,7 +8,7 @@ if ( $('tr.child-row:visible').length > 0 ) {
 
 if ( $parent_row.next().hasClass('child-row') ) {
 } else {
-  $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render "send_secure_message_form" %></td></tr>');
+  $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render "new_secure_message" %></td></tr>');
   $("li>a:contains('Collapse Form')").eq(containing_row.index()).removeClass('disabled');
   $('.dropdown.pull-right').removeClass('open');
 }
