refs #88213 refactor more code

--- a/app/views/exchanges/hbx_profiles/create_send_secure_message.js.erb
+++ b/app/views/exchanges/hbx_profiles/create_send_secure_message.js.erb
@@ -8,5 +8,5 @@ if ( $parent_row.next().hasClass('child-row') ) {
 //
 }
 else {
-  $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render "create_secure_message"%></td></tr>');
+  $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render "create_send_secure_message"%></td></tr>');
 }
