--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -103,7 +103,6 @@
             <%= f.select :relationship, relationship_options(f.object, request.referer), {include_blank: "#{l10n("this_person_is_name", name: @person.first_name)} *"} %>
           </div>
 
-
           <% if has_active_consumer_dependent?(@person,@dependent) %>
             <div class="col-lg-5 col-md-2 col-sm-2 col-xs-5 form-group form-group-lg no-pd top-buffer" >
               <span id="is_applying_coverage_value_dep">Is <%= @dependent.try(:family_member).try(:person).present? ? @dependent.try(:family_member).try(:person).try(:first_name) : "this person" %> applying for coverage? *</span>
@@ -112,6 +111,11 @@
             <%= render 'shared/is_applying_for_coverage', f: f, first_checked: first_checked, second_checked: second_checked %>
           <% end %>
         </div>
+        <% if current_user.does_not_have_any_staff_role? %>
+          <div class="row row-form-wrapper no-buffer">
+              <%= render 'shared/age_off_excluded', f: f %>
+          </div>
+        <% end %>
 
         <% if has_active_consumer_dependent?(@person,@dependent) %>
           <%= render 'shared/ssn_coverage_msg' %>
