REFS R4 - Fixes cucumber for checking for off plan year benefit packages
REFS R4 - Progress

REFS R4 - Comments our cucumber for next development

--- a/app/views/shared/_past_enrollment.html.erb
+++ b/app/views/shared/_past_enrollment.html.erb
@@ -1,4 +1,4 @@
-<% plan = past_enrollment.product %>
+<% plan = past_enrollment.product || past_enrollment.plan %>
 <tr>
   <td>
     <%= enrollment_coverage_end(past_enrollment) %>
