--- a/app/views/shared/_past_enrollment.html.erb
+++ b/app/views/shared/_past_enrollment.html.erb
@@ -1,4 +1,4 @@
-<% plan = past_enrollment.product || past_enrollment.plan %>
+<% plan = past_enrollment.product %>
 <tr>
   <td>
     <%= enrollment_coverage_end(past_enrollment) %>
