ref: 88920 Using saml for end point.

--- a/app/views/insured/plan_shoppings/receipt.en.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.en.html.erb
@@ -292,7 +292,8 @@
         </p>
       </div>
       <div class="modal-footer">
-        <%= link_to "LEAVE DC HEALTH LINK", "https://healthy.kaiserpermanente.org/new-members/#register-to-kp-org", {type: "button", class: "btn btn-default pull-left", id: "payment-redirect-kp", target: "_blank"} %>
+
+        <%= link_to "LEAVE DC HEALTH LINK", SamlInformation.kp_pay_now, {type: "button", class: "btn btn-default pull-left", id: "payment-redirect-kp", target: "_blank"} %>
         <button type="button" class="btn btn-default" data-dismiss="modal">GO BACK</button>
       </div>
     </div><!-- /.modal-content -->
