--- a/app/views/insured/plan_shoppings/receipt.en.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.en.html.erb
@@ -53,7 +53,7 @@
         <% end %>
         <% if show_pay_now? %>
           <% if can_access_pay_now_button %>
-            <button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal" id="kp-pay-now" data-enrollment="<%= @enrollment.hbx_id %>">Pay Now</button>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal" data-enrollment="<%= @enrollment.hbx_id %>">Pay Now</button>
           <% else %>
             <button class="btn btn-primary disabled">Pay Now</button>
           <% end %>
@@ -292,10 +292,32 @@
         </p>
       </div>
       <div class="modal-footer">
-        <%= hidden_field_tag :kp_pay_now_url, @kp_pay_now_url%>
-        <button class="btn btn-default pull-left" id="payment-redirect-kp">LEAVE DC HEALTH LINK</button>
+        <form action=<%= @kp_pay_now_url %> method="post" target="_blank" id="pay_now_form">
+          <input type="hidden" name="SAMLResponse" value="response" id="sp"/>
+          <button type="submit" class="btn btn-default sp interaction-click-control-print-purchase-confirmation" id="pay-now" value="<%= @enrollment.hbx_id %>">
+            Leave DC LINK
+          </button>
+        </form>
         <button type="button" class="btn btn-default" data-dismiss="modal">GO BACK</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<script>
+$("#pay-now").on('click', function (e) {
+    e.preventDefault();
+    $.ajax({
+        type: "GET",
+        url: "/payment_transactions/generate_saml_response",
+        data: {enrollment_id: $("#pay-now").val()},
+        success: function (response) {
+            document.getElementById("sp").value = response["SAMLResponse"];
+            $("#pay_now_form").submit();
+        },
+        error: function (response) {
+            // error handling
+        }
+    });
+  });
+</script>
