--- a/app/views/insured/plan_shoppings/receipt.en.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.en.html.erb
@@ -294,7 +294,7 @@
       <div class="modal-footer">
         <form action=<%= @kp_pay_now_url %> method="post" target="_blank" id="pay_now_form">
           <input type="hidden" name="SAMLResponse" value="response" id="sp"/>
-          <button type="submit" class="btn btn-default sp interaction-click-control-print-purchase-confirmation" id="pay-now" value="<%= @enrollment.hbx_id %>">
+          <button type="submit" class="btn btn-default pull-left sp interaction-click-control-print-purchase-confirmation" id="pay-now" value="<%= @enrollment.hbx_id %>">
             Leave DC LINK
           </button>
         </form>
