refs #88858 change modal pop up message

--- a/app/views/exchanges/hbx_profiles/_new_secure_message.html.erb
+++ b/app/views/exchanges/hbx_profiles/_new_secure_message.html.erb
@@ -46,7 +46,7 @@
     <div class="modal-dialog" style="width: 500px;">
       <div class="modal-content">
         <div class="modal-body" style="text-align: center;">
-          <p>Are you sure?</p>
+          <p>Are you sure you want to <b>Send/Upload</b> this message?</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary btn-confirmation" onclick='confirmSecureMsg(event); return false;'>Confirm</button>
