--- a/app/views/insured/plan_shoppings/receipt.en.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.en.html.erb
@@ -312,8 +312,12 @@ $("#pay-now").on('click', function (e) {
         url: "/payment_transactions/generate_saml_response",
         data: {enrollment_id: $("#pay-now").val()},
         success: function (response) {
+          if (response["status"] == 500){
+            alert("We're sorry, but something went wrong. You can try again, or pay once you receive your invoice.")}
+          else{
             document.getElementById("sp").value = response["SAMLResponse"];
             $("#pay_now_form").submit();
+          }
         },
         error: function (response) {
             // error handling
