--- a/app/views/shared/_consumer_fields.html.erb
+++ b/app/views/shared/_consumer_fields.html.erb
@@ -4,7 +4,7 @@
   <div id="consumer_fields" class="focus_effect">
     <div class="row row-form-wrapper no-buffer">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group form-group-lg top-buffer">
-        <label class="run-glossary">Are you a US citizen or US national? *</label>
+        <label class="run-glossary">Is this person a US citizen or US national? *</label>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd">
         <div class="radio skinned-form-controls skinned-form-controls-mac">
@@ -26,7 +26,7 @@
 
     <div class="row row-form-wrapper no-buffer <%= 'hidden_field' unless show_naturalized_citizen_container(f.object) %>" id="naturalized_citizen_container">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group form-group-lg top-buffer">
-        <label>Are you a naturalized citizen? *</label>
+        <label>Is this person a naturalized citizen? *</label>
       </div>
       <div class="col-lg-3 col-md-2 col-sm-6 col-xs-6 form-group form-group-lg no-pd">
         <div class="radio skinned-form-controls skinned-form-controls-mac">
@@ -82,7 +82,7 @@
     <div class="row row-form-wrapper no-buffer" id='indian_tribe_area'>
       <div class="row no-buffer">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-          <label class="run-glossary">Are you a member of an American Indian or Alaska Native Tribe? *</label>
+          <label class="run-glossary">Is this person a member of an American Indian or Alaska Native Tribe? *</label>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
           <div class="radio">
@@ -112,7 +112,7 @@
 
     <div class="row row-form-wrapper no-buffer">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 top-buffer">
-        <label class="required no-pd">Are you currently incarcerated? *</label>
+        <label class="required no-pd">Is this person currently incarcerated? *</label>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 form-group form-group-lg no-pd border_bottom_zero">
         <div class="radio">
