--- a/app/views/insured/families/find_sep.html.erb
+++ b/app/views/insured/families/find_sep.html.erb
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="row">
             <% if can_show_covid_message_on_sep_carousel?(@person) %>
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info-wrapper" style="text-align: left">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info-wrapper" style="text-align: center">
                 <h4><strong><%= l10n("insured.families.covid_sep_carousel_message") %></strong></h4>
               </div>
             <% else %>
