--- a/app/views/insured/families/find_sep.html.erb
+++ b/app/views/insured/families/find_sep.html.erb
@@ -7,11 +7,11 @@
           <div class="row">
             <div class="row">
             <% if can_show_covid_message_on_sep_carousel?(@person) %>
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info-wrapper" style="text-align: center">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info-wrapper qle-carousel">
                 <h4><strong><%= l10n("insured.families.covid_sep_carousel_message") %></strong></h4>
               </div>
             <% else %>
-              <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 info-wrapper">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 info-wrapper qle-carousel">
                 <h4><strong><%= l10n("insured.families.final_sep_experienced_any_events") %></strong></h4>
               </div>
             <% end %>
