refs #FEL Fix errors in template

--- a/components/notifier/app/views/layouts/notifier/ivl_pdf_layout.html.erb
+++ b/components/notifier/app/views/layouts/notifier/ivl_pdf_layout.html.erb
@@ -2830,6 +2830,10 @@
         font-size:102%;
         font-weight:bold;
       }
+
+      strong {
+        font-weight: bold;
+      }
       .widn {
         width:100%;
         display:block;
