--- a/app/views/user_mailer/broker_application_confirmation.html.erb
+++ b/app/views/user_mailer/broker_application_confirmation.html.erb
@@ -22,7 +22,7 @@
       <div>Please reach out to DC Health Link at dchl.producer@dc.gov with any questions.</div>
     <% else %>
       <div>
-        Thank you for submitting your application to become a certified broker through the Health Connector for Business. We'll review your application to make sure that you meet all of the requirements for our certified brokers.
+        Thank you for submitting your application to become a certified broker through the Access Health for Business. We'll review your application to make sure that you meet all of the requirements for our certified brokers.
       </div>
       <br />
       <div>
@@ -34,7 +34,7 @@
       </div>
       <br />
       <div>
-        If you do not appear to meet all of our requirements, we will let you know which steps you will need to take before you can become a Health Connector-certified broker.
+        If you do not appear to meet all of our requirements, we will let you know which steps you will need to take before you can become a Access Health-certified broker.
       </div>
       <br />
       <div>
