--- a/app/views/user_mailer/broker_invitation_email.html.erb
+++ b/app/views/user_mailer/broker_invitation_email.html.erb
@@ -11,7 +11,7 @@
       </div>
       <br />
       <div>
-        Congratulations-- we've reviewed your application and you are now approved as a certified broker through the Health Connector for Business.
+        Congratulations-- we've reviewed your application and you are now approved as a certified broker through the Access Health for Business.
       </div>
       <div>
         <p><strong>Next Steps:</strong></p>
@@ -24,7 +24,7 @@
       </div>
       <div>
         <p>
-          <strong>2.</strong> After you've set up your new username and password, log in to your new Health Connector for Business broker account through <a href="<%= site_user_sign_in_url %>">our website</a>.
+          <strong>2.</strong> After you've set up your new username and password, log in to your new Access Health for Business broker account through <a href="<%= site_user_sign_in_url %>">our website</a>.
         </p>
       </div>
 
