Update CT color scheme/ text

--- a/app/assets/stylesheets/_variables.scss.erb
+++ b/app/assets/stylesheets/_variables.scss.erb
@@ -1,11 +1,11 @@
 $mhc-dark-blue:#007bc4;
-$mhc-blue: #007bc4;
-$mhc-darker-blue: #007bc4;
+$mhc-blue: #005e81;
+$mhc-darker-blue: #005e81;
 $mhc-dark-gray: #706f6d;
-$mhc-gray: #b7b7b7;
-$mhc-orange: #e72b2d;
-$mhc-red: #e72b2d;
-$mhc-href:#337ab7;
+$mhc-gray: #F0592A;
+$mhc-orange: #F0592A;
+$mhc-red: #F7B319;
+$mhc-href:#005e81;
 $mhc-light-gray:#007bc4;
 $mhc-heading-gray:#007bc4;
 
@@ -30,12 +30,12 @@ $primary-blue: $mhc-blue;
 $primary-white: #ffffff;
 $primary-button-text: #ffffff;
 $primary-green: #69A30D;
-$primary-black: #5C5C5C;
+$primary-black: #005e81;
 $primay-active-button-text-color: #ffffff;
 $primary-bold: 600;
 $primary-light: 300;
 $primary-gray: $mhc-gray;
-$primary-light-gray: #f2f2f2;
+$primary-light-gray: #ffffff;
 $primary-dark-gray: #7b7b7b;
 $primary-button-text-casing: uppercase;
 $primary-border-radius: .5rem;
