--- a/app/assets/stylesheets/bootstrap_overrides.scss.erb
+++ b/app/assets/stylesheets/bootstrap_overrides.scss.erb
@@ -41,6 +41,14 @@ h6,
   /*@include gradient-horizontal(#1834cc, #1dc937, 0%, 100%);*/
 }
 
+.ct-cover, #ct-cover {
+  display: block;
+  max-width:100%;
+  max-height:100%;
+  margin-left:auto;
+  margin-right:auto
+}
+
 
 .nav-sidebar {
   padding: 8px 15px;
@@ -96,7 +104,7 @@ body {
         line-height: 70px;
         padding: 23px 15px;
         font-weight: 600;
-        color: $primary-black;
+        color: #F0592A;
         &:hover {
           background-color: $background-hover;
           text-decoration: none;
@@ -217,7 +225,7 @@ fieldset[disabled] .btn-default.active {
   border-color: $secondary-button-border;
 }
 .btn-default .badge {
-  color: #337ab7;
+  color: #005e81;
   background-color: $secondary-button-background;
 }
 
@@ -319,7 +327,7 @@ fieldset[disabled] .btn-danger.active {
     margin: 0;
   }
   .btn-default {
-    color: #333;
+    color: #005e81;
     background-color: #fff;
     border-color: #ccc;
   }
@@ -329,7 +337,7 @@ fieldset[disabled] .btn-danger.active {
   .btn-default:active,
   .btn-default.active,
   .open > .dropdown-toggle.btn-default {
-    color: #333;
+    color: #005e81;
     background-color: #e6e6e6;
     border-color: #adadad;
   }
@@ -361,7 +369,7 @@ fieldset[disabled] .btn-danger.active {
   }
   .btn-default .badge {
     color: #fff;
-    background-color: #333;
+    background-color: #005e81;
   }
 }
 
