--- a/app/assets/stylesheets/effective_datatable.scss.erb
+++ b/app/assets/stylesheets/effective_datatable.scss.erb
@@ -57,12 +57,12 @@
 
   .pagination > li > a{
     background: #ffffff !important;
-    color: #337ab7 !important
+    color: #005e81 !important
   }
 
   .pagination > .active > a{
     background-color: $brand-primary !important;
-    border-color: #337ab7 !important;
+    border-color: #005e81 !important;
     color: #ffffff !important;
   }
 
@@ -71,19 +71,19 @@
   }
 
   .pagination > .disabled > a{
-    color: #777 !important;
+    color: #005e81 !important;
   }
 
   .dataTables_info{
     font-size: 14px;
-    color: #333;
+    color: #005e81;
     text-align: right !important;
   }
 
   .dataTables_length {
     padding: 0.675 !important;
     font-size: 14px;
-    color: #333;
+    color: #005e81;
     margin-bottom: 4px !important;
     label{
       display: inline;
@@ -163,4 +163,3 @@
       word-break: break-word;
       width:200px;
   }
-
