--- a/app/assets/stylesheets/ui-components/jquery-ui.scss.erb
+++ b/app/assets/stylesheets/ui-components/jquery-ui.scss.erb
@@ -1003,7 +1003,7 @@ a.ui-button:active,
 .ui-widget-header .ui-state-highlight {
   border: 1px solid #dad55e;
   background: #fffa90;
-  color: #777620;
+  color: #005e81;
 }
 .ui-state-checked {
   border: 1px solid #dad55e;
@@ -1012,7 +1012,7 @@ a.ui-button:active,
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
 .ui-widget-header .ui-state-highlight a {
-  color: #777620;
+  color: #005e81;
 }
 .ui-state-error,
 .ui-widget-content .ui-state-error,
