--- a/project_gems/effective_datatables-2.6.14/app/assets/stylesheets/dataTables/colReorder/colReorder.bootstrap.css
+++ b/project_gems/effective_datatables-2.6.14/app/assets/stylesheets/dataTables/colReorder/colReorder.bootstrap.css
@@ -6,6 +6,6 @@ table.DTCR_clonedTable.dataTable {
 
 div.DTCR_pointer {
   width: 1px;
-  background-color: #337ab7;
+  background-color: #005e81;
   z-index: 201;
 }
