--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -17,6 +17,15 @@
  *= require_self
  */
 
+ .ct-cover, #ct-cover {
+   display: block;
+   max-width:100%;
+   max-height:100%;
+   margin-top:30px;
+   margin-left:auto;
+   margin-right:auto;
+   border: 1px solid #F0592A;
+ }
 
 .module {
   .flex {
@@ -172,7 +181,7 @@ img {
        li {
          padding: 0;
          .dark-grey {
-           color: #5C5C5C;
+           color: #005e81;
            font-weight: 400;
            font-size: 12px;
            position: relative;
