--- a/app/assets/stylesheets/brokers.scss.erb
+++ b/app/assets/stylesheets/brokers.scss.erb
@@ -67,7 +67,7 @@ input[type=number]::-webkit-outer-spin-button {
       color: $primary-green;
       font-weight: bold;
       span {
-        color: #333;
+        color: #005e81;
         font-weight: normal;
       }
     }
@@ -209,7 +209,7 @@ input[type=number]::-webkit-outer-spin-button {
         color: $primary-green;
         font-weight: bold;
         span {
-          color: #333;
+          color: #005e81;
           font-weight: normal;
         }
       }
@@ -368,11 +368,11 @@ input[type=number]::-webkit-outer-spin-button {
      }
 
     .quote_detail_plan_header {
-      background: linear-gradient(#777, #444);
+      background: linear-gradient(#005e81, #444);
       border-left: 1px solid #555;
-      border-right: 1px solid #777;
+      border-right: 1px solid #005e81;
       border-top: 1px solid #555;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid #005e81;
       box-shadow: inset 0 1px 0 #999;
       color: #fff;
       font-weight: bold;
@@ -410,7 +410,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin-top:15px;
   padding-left:20px;
   padding-right:20px;
-  
+
   .dc-green {
     color:$primary-green;
   }
