--- a/components/sponsored_benefits/app/assets/stylesheets/sponsored_benefits/_variables.scss
+++ b/components/sponsored_benefits/app/assets/stylesheets/sponsored_benefits/_variables.scss
@@ -14,7 +14,7 @@ $primary-blue: $mhc-blue;
 $primary-white: #ffffff;
 $primary-button-text: #ffffff;
 $primary-green: #69A30D;
-$primary-black: #5C5C5C;
+$primary-black: #005e81;
 $primay-active-button-text-color: #ffffff;
 $primary-bold: 600;
 $primary-light: 300;
